Fix overlapping button and ads

--- a/travel-buddy/src/styles/HomePage.css
+++ b/travel-buddy/src/styles/HomePage.css
@@ -52,7 +52,9 @@ body{
 #addDestinationButton {
     position: absolute;
     align-self: flex-end;
-    margin:50px;
+    margin-top: 18px;
+    margin-bottom: 10px;
+    margin-right: 44px;
     height: 50px;
     width: 110px;
     z-index: 2;
@@ -98,5 +100,6 @@ body{
     padding-right: 25px;
     padding-top: 90px;
     padding-bottom: 10px;
+    margin-top: 16px;
 }
 
